--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,3 +10,12 @@ datasources:
     schema-generate: CREATE_DROP
     dialect: H2
 jpa.default.properties.hibernate.hbm2ddl.auto: update
+jpa:
+  default:
+    packages-to-scan:
+      - 'com.ecommerce'
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
